// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardPage - Unit Tests > Snapshot > should match snapshot 1`] = `
<div
  data-testid="dashboard-layout"
>
  <div
    data-testid="layout-user"
  >
    Test User
  </div>
  <div
    data-testid="layout-active-tab"
  >
    dashboard
  </div>
  <div
    data-testid="layout-title"
  >
    Dashboard
  </div>
  <div
    data-testid="layout-subtitle"
  >
    Visualiza y analiza el rendimiento de tu inventario
  </div>
  <div
    data-testid="layout-children"
  >
    <div
      class="dashboard-page"
    >
      <div
        class="dashboard-page-header"
      >
        <div
          class="dashboard-page-title-section"
        >
          <h1
            class="dashboard-page-title"
          >
            Panel de Control
          </h1>
        </div>
      </div>
      <div
        class="dashboard-page-container"
      >
        <div
          class="consumption-chart"
        >
          <div
            data-testid="consumption-chart"
          >
            Consumption Chart
          </div>
        </div>
        <div
          class="ingredients-chart-item"
        >
          <div
            data-testid="top-ingredients-chart"
          >
            Top Ingredients Chart
          </div>
        </div>
        <div
          class="low-chart-item"
        >
          <div
            data-testid="low-stock-chart"
          >
            Low Stock Chart
          </div>
        </div>
        <div
          class="efficiency-gauge-item"
        >
          <div
            data-testid="efficiency-gauge"
          >
            Efficiency Gauge
          </div>
        </div>
        <div
          class="waste-gauge-item"
        >
          <div
            data-testid="waste-gauge"
          >
            Waste Gauge
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardPage - Unit Tests > Snapshot > should match snapshot without user 1`] = `
<div
  data-testid="dashboard-layout"
>
  <div
    data-testid="layout-user"
  >
    No user
  </div>
  <div
    data-testid="layout-active-tab"
  >
    dashboard
  </div>
  <div
    data-testid="layout-title"
  >
    Dashboard
  </div>
  <div
    data-testid="layout-subtitle"
  >
    Visualiza y analiza el rendimiento de tu inventario
  </div>
  <div
    data-testid="layout-children"
  >
    <div
      class="dashboard-page"
    >
      <div
        class="dashboard-page-header"
      >
        <div
          class="dashboard-page-title-section"
        >
          <h1
            class="dashboard-page-title"
          >
            Panel de Control
          </h1>
        </div>
      </div>
      <div
        class="dashboard-page-container"
      >
        <div
          class="consumption-chart"
        >
          <div
            data-testid="consumption-chart"
          >
            Consumption Chart
          </div>
        </div>
        <div
          class="ingredients-chart-item"
        >
          <div
            data-testid="top-ingredients-chart"
          >
            Top Ingredients Chart
          </div>
        </div>
        <div
          class="low-chart-item"
        >
          <div
            data-testid="low-stock-chart"
          >
            Low Stock Chart
          </div>
        </div>
        <div
          class="efficiency-gauge-item"
        >
          <div
            data-testid="efficiency-gauge"
          >
            Efficiency Gauge
          </div>
        </div>
        <div
          class="waste-gauge-item"
        >
          <div
            data-testid="waste-gauge"
          >
            Waste Gauge
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
